CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(xevxml CXX)
SET(serial "1.0.0")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)

LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
INCLUDE( xevdocs )

INSTALL_FILES( /lib/xev-trans/ FILES ${PROJECT_SOURCE_DIR}/xev-trans/lib/)
INSTALL_FILES( /include/ FILES ${PROJECT_SOURCE_DIR}/include/)
INSTALL_FILES( /share/${PROJECT_NAME}/ FILES ${PROJECT_SOURCE_DIR}/README.md)
INSTALL_FILES( /share/${PROJECT_NAME}/tests/identity/ FILES ${PROJECT_SOURCE_DIR}/test/identity/)
INSTALL_FILES( /share/${PROJECT_NAME}/tests/xsltgen/  FILES ${PROJECT_SOURCE_DIR}/test/xsltgen/)

INCLUDE( xevtests )
