CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(xevxml)
SET(XEVXML_PROGRAM_MAJOR_VERSION "1")
SET(XEVXML_PROGRAM_MINOR_VERSION "1")
SET(XEVXML_PROGRAM_REVISION "1")
SET(XEVXML_FORMAT_MAJOR_VERSION "1")
SET(XEVXML_FORMAT_MINOR_VERSION "1")
SET(XEVXML_FORMAT_REVISION "1")


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(tools)

LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
INCLUDE( xevdocs )

INSTALL_FILES( /lib/xev-trans/ FILES ${PROJECT_SOURCE_DIR}/xev-trans/lib/)
INSTALL_FILES( /lib/xev-tools/ FILES ${PROJECT_SOURCE_DIR}/conf/)
INSTALL_FILES( /include/ FILES ${PROJECT_SOURCE_DIR}/include/)
INSTALL_FILES( /share/${PROJECT_NAME}/ FILES ${PROJECT_SOURCE_DIR}/README.md)
INSTALL_FILES( /share/${PROJECT_NAME}/tests/identity/ FILES ${PROJECT_SOURCE_DIR}/test/identity/)
INSTALL_FILES( /share/${PROJECT_NAME}/tests/xsltgen/  FILES ${PROJECT_SOURCE_DIR}/test/xsltgen/)
INSTALL_FILES( /share/${PROJECT_NAME}/tests/ FILES ${PROJECT_SOURCE_DIR}/test/xevxml_vars.sh)
INSTALL_FILES( /bin/ FILES ${PROJECT_SOURCE_DIR}/test/xevxml_vars.sh)

INCLUDE( xevtests )
